; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/extr_intel.c_check_memory_type_self_snoop_errata.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/extr_intel.c_check_memory_type_self_snoop_errata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpuinfo_x86 = type { i32 }

@X86_FEATURE_SELFSNOOP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cpuinfo_x86*)* @check_memory_type_self_snoop_errata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_memory_type_self_snoop_errata(%struct.cpuinfo_x86* %0) #0 {
  %2 = alloca %struct.cpuinfo_x86*, align 8
  store %struct.cpuinfo_x86* %0, %struct.cpuinfo_x86** %2, align 8
  %3 = load %struct.cpuinfo_x86*, %struct.cpuinfo_x86** %2, align 8
  %4 = getelementptr inbounds %struct.cpuinfo_x86, %struct.cpuinfo_x86* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %9 [
    i32 135, label %6
    i32 138, label %6
    i32 137, label %6
    i32 136, label %6
    i32 139, label %6
    i32 134, label %6
    i32 131, label %6
    i32 133, label %6
    i32 132, label %6
    i32 129, label %6
    i32 128, label %6
    i32 130, label %6
  ]

6:                                                ; preds = %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1
  %7 = load i32, i32* @X86_FEATURE_SELFSNOOP, align 4
  %8 = call i32 @setup_clear_cpu_cap(i32 %7)
  br label %9

9:                                                ; preds = %6, %1
  ret void
}

declare dso_local i32 @setup_clear_cpu_cap(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
